DGC-22: Add all pattern to drupal. (#37)
* DGC-22: Add all pattern to drupal.

* DGC-22: Update the pattern.

* DGC-22: Update the hero text with card component.

--- a/web/themes/custom/govcon/govcon.gutenberg.yml
+++ b/web/themes/custom/govcon/govcon.gutenberg.yml
@@ -189,7 +189,7 @@ theme-support:
 
     # layout must be defined when using align wide setting on version 3.0 or above.
     layout:
-      contentSize: 1368px
+      contentSize: 1400px # added 1400 = 1368 + 32(Padding horizontal)
       wideSize: 1920px
     color:
       custom: false
