DGC-81: Update the site configuration.

--- a/config/sync/gutenberg.settings.yml
+++ b/config/sync/gutenberg.settings.yml
@@ -34,9 +34,7 @@ cambridge_landing_page_allowed_blocks:
   - core/video
   - media/all
 cambridge_landing_page_allowed_content_block_types: {  }
-cambridge_landing_page_allowed_drupal_blocks:
-  - search_form_block
-  - system_breadcrumb_block
+cambridge_landing_page_allowed_drupal_blocks: {}
 cambridge_landing_page_enable_full: true
 cambridge_landing_page_template: ''
 cambridge_landing_page_template_lock: none
@@ -99,9 +97,9 @@ landing_page_allowed_blocks:
   - core/verse
   - core/video
 landing_page_allowed_content_block_types: {  }
-landing_page_allowed_drupal_blocks: {  }
+landing_page_allowed_drupal_blocks: {}
 landing_page_enable_full: true
-landing_page_template: "[\r\n[\"drupal/simple-text\", {\"placeholder\": \"Insert Page Title\",\"tag\":\"h1\", \"mappingFields\":[{\"field\": \"title\"}]}]\r\n]"
+landing_page_template: ''
 landing_page_template_lock: none
 session_archive_enable_full: false
 sponsor_enable_full: false
