Fixed listing-card Component with button

--- a/web/themes/custom/govcon/components/molecules/listing-card/listing-card.yml
+++ b/web/themes/custom/govcon/components/molecules/listing-card/listing-card.yml
@@ -16,3 +16,5 @@ fields:
     value: "Field two content"
   - label: "Field Three"
     value: "Field three content"
+  - label: "Field Four"
+    value: "Field Four content"
