DGC-53: Updated date format for Session Archive.

--- a/web/themes/custom/govcon/components/templates/session-archive/session-archive.yml
+++ b/web/themes/custom/govcon/components/templates/session-archive/session-archive.yml
@@ -17,7 +17,7 @@ session_conference_year:
 
 session_date_time:
   label: "Date/Time"
-  value: "Fri, 09/25/2020 - 1:30pm EDT"
+  value: "Fri, 09/25/2020 - 1:30pm"
 
 session_room:
   label: "Room"
