CTA Variable fix

--- a/web/themes/custom/govcon/components/molecules/listing-card/listing-card.yml
+++ b/web/themes/custom/govcon/components/molecules/listing-card/listing-card.yml
@@ -3,12 +3,11 @@ image_alt: "Sample image"
 heading: "Heading"
 subheading: "Subheading"
 description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
-link:
+cta:
   url: "#"
   title: "Button"
   target: "_blank"
   content: "Button"
-  classes: ["text-cobalt", "h4"]
 fields:
   - label: "Field One"
     value: "Field one content"
