--- a/web/themes/custom/govcon/govcon.info.yml
+++ b/web/themes/custom/govcon/govcon.info.yml
@@ -24,6 +24,8 @@ components:
       - components/molecules
     organisms:
       - components/organisms
+    templates:
+      - components/templates
     pages:
       - components/pages
     partials:
