DGC-74: Style library and mdx update.

--- a/web/themes/custom/govcon/govcon.libraries.yml
+++ b/web/themes/custom/govcon/govcon.libraries.yml
@@ -9,3 +9,8 @@ editor:
   css:
     theme:
       dist/components/gutenberg/gutenberg-style.css: {}
+
+announcement:
+  css:
+    theme:
+      dist/components/templates/announcement/announcement.css: {}
