DGC-53: Updated style and doc file as review.

--- a/web/themes/custom/govcon/govcon.libraries.yml
+++ b/web/themes/custom/govcon/govcon.libraries.yml
@@ -9,3 +9,8 @@ editor:
   css:
     theme:
       dist/components/gutenberg/gutenberg-style.css: {}
+
+session-archive:
+  css:
+    theme:
+      dist/components/templates/session-archive/session-archive.css: {}
