DGC: 73 - Announcement Views (#53)
* Created Views Work In Progress

* Announcement Listing

* Added Listing View Block

* Updated SCSS and removed Files added classes in Views

* Updated All Announcement views

* Updated Featured Section with Block

* Updated the Features Section Pattern

* Libraries Fixed

* Updated the Listing Component

* Updated the View Mode

--- a/config/sync/gutenberg.settings.yml
+++ b/config/sync/gutenberg.settings.yml
@@ -97,7 +97,9 @@ landing_page_allowed_blocks:
   - core/verse
   - core/video
 landing_page_allowed_content_block_types: {  }
-landing_page_allowed_drupal_blocks: {  }
+landing_page_allowed_drupal_blocks:
+  - 'views_block:announcements-all_announcement'
+  - 'views_block:announcements-recent_announcement'
 landing_page_enable_full: true
 landing_page_template: ''
 landing_page_template_lock: none
