--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,22 @@
     "require": {
         "composer/installers": "^2.0",
         "drupal/admin_toolbar": "^3.5",
+        "drupal/coffee": "^2.0",
         "drupal/components": "^3.1",
         "drupal/config_ignore": "^3.3",
         "drupal/core": "^11.1",
         "drupal/core-composer-scaffold": "^11.0",
         "drupal/core-project-message": "^11.0",
         "drupal/core-recommended": "^11.0",
+        "drupal/editoria11y": "^2.2",
+        "drupal/extlink": "^2.0",
+        "drupal/focal_point": "^2.1",
+        "drupal/google_analytics": "^4.0",
         "drupal/gutenberg": "^3.0@dev",
         "drupal/menu_link_attributes": "^1.5",
         "drupal/metatag": "^2.1",
         "drupal/pathauto": "^1.13",
+        "drupal/simple_sitemap": "^4.2",
         "drupal/structure_sync": "^2.0",
         "drupal/twig_debugger": "^1.1",
         "drupal/twig_tweak": "^3.4",
