--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -11,6 +11,7 @@ module:
   block_content: 0
   breakpoint: 0
   ckeditor5: 0
+  coffee: 0
   comment: 0
   components: 0
   config: 0
@@ -18,15 +19,19 @@ module:
   contact: 0
   content_moderation: 0
   contextual: 0
+  crop: 0
   datetime: 0
   dblog: 0
   dynamic_page_cache: 0
   editor: 0
+  editoria11y: 0
   example_blocks: 0
   field: 0
   field_ui: 0
   file: 0
   filter: 0
+  focal_point: 0
+  google_analytics: 0
   govcon_custom: 0
   gutenberg: 0
   help: 0
@@ -46,6 +51,7 @@ module:
   path_alias: 0
   search: 0
   shortcut: 0
+  simple_sitemap: 0
   structure_sync: 0
   system: 0
   taxonomy: 0
@@ -56,6 +62,7 @@ module:
   user: 0
   views_ui: 0
   workflows: 0
+  extlink: 1
   pathauto: 1
   views: 10
   standard: 1000
