DGC-53: Updated Session Archive page. (#61)
* DGC-53: Updated logic for breaking areas of page.

* DGC-53: Updated new fields for session archive ct.

* DGC-53: Fixed session recording label.

* DGC-53: Axecore accessibilty enabled.

--- a/config/sync/core.entity_view_display.node.session_archive.default.yml
+++ b/config/sync/core.entity_view_display.node.session_archive.default.yml
@@ -42,7 +42,7 @@ content:
     region: content
   field__sides_link:
     type: link
-    label: above
+    label: hidden
     settings:
       trim_length: 80
       url_only: false
@@ -144,7 +144,7 @@ content:
     region: content
   field_supporting_documents:
     type: file_default
-    label: above
+    label: hidden
     settings:
       use_description_as_link_text: true
     third_party_settings: {  }
